<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_grey"
    tools:context=".activity.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">
            <!-- Sign in -->
            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="32dp"
                android:text="@string/sign_in"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                android:id="@+id/logo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:src="@drawable/logo_tirta_agung"
                app:layout_constraintEnd_toEndOf="@+id/sign_in"
                app:layout_constraintStart_toStartOf="@+id/sign_in"
                app:layout_constraintTop_toBottomOf="@+id/sign_in" />
            <!-- Rectangle 1 -->
            <View
                android:id="@+id/rectangle_1"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="36dp"
                android:background="@drawable/rectangle_1"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@+id/logo" />
            <EditText
                android:id="@+id/edt_email_sign_in"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="email / username"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:background="@color/transparan"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="16dp"
                />
            <!-- Rectangle 2 -->
            <View
                android:id="@+id/rectangle_2"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_1"
                android:elevation="4dp"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@+id/edt_email_sign_in" />
            <EditText
                android:id="@+id/edt_password_sign_in"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:hint="password"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textAlignment="viewStart"
                android:background="@color/transparan"
                app:layout_constraintEnd_toEndOf="@+id/logo"
                app:layout_constraintStart_toStartOf="@+id/logo"
                app:layout_constraintTop_toBottomOf="@+id/edt_email_sign_in"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="16dp"
                />
            <ImageButton
                android:onClick="actionViewHidePassword"
                android:id="@+id/img_btn_view_hide_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparan"
                android:src="@drawable/ic_hide_pass"
                app:layout_constraintBottom_toBottomOf="@+id/edt_password_sign_in"
                app:layout_constraintEnd_toEndOf="@+id/edt_password_sign_in"
                app:layout_constraintTop_toTopOf="@+id/rectangle_2" />
            <!-- Rectangle 3 -->
            <View
                android:id="@+id/rectangle_3"
                android:onClick="actionSignIn"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="24dp"
                android:background="@drawable/rectangle_3"
                app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
                app:layout_constraintStart_toStartOf="@+id/rectangle_2"
                app:layout_constraintTop_toBottomOf="@+id/rectangle_2" />
            <TextView
                android:onClick="actionSignIn"
                android:id="@+id/txt_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="Sign in"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/rectangle_3"
                app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
                app:layout_constraintStart_toStartOf="@+id/rectangle_3"
                app:layout_constraintTop_toTopOf="@+id/rectangle_3" />
            <!-- Forgot Password? -->
            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/forgot_pass"
                android:textAppearance="@style/forgot_pass_and_register"
                app:layout_constraintEnd_toEndOf="@+id/rectangle_3"
                app:layout_constraintStart_toStartOf="@+id/rectangle_3"
                app:layout_constraintTop_toBottomOf="@+id/rectangle_3" />
            <!-- Don’t have an account Register Now! -->
            <TextView
                android:id="@+id/don_t_have_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="48dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/don_t_have_"
                android:textAppearance="@style/forgot_pass_and_register"
                app:layout_constraintEnd_toEndOf="@+id/forgot_pass"
                app:layout_constraintStart_toStartOf="@+id/forgot_pass"
                app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />
            <TextView
                android:id="@+id/register_now"
                android:onClick="actionRegisterNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/register_now"
                android:textColor="#062993"
                android:textAppearance="@style/forgot_pass_and_register"
                app:layout_constraintEnd_toEndOf="@+id/forgot_pass"
                app:layout_constraintStart_toStartOf="@+id/forgot_pass"
                app:layout_constraintTop_toBottomOf="@+id/don_t_have_" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>